# XSSense

./: .gitattributes  .gitignore  LICENSE  README.md  requirements.txt  xssense.py
.github/: FUNDING.yml
lib/: core.py
lib/crawler/: crawler.py
lib/helper/: Log.py  helper.py
lib/scanner/: __init__.py  contracts.py  detector.py  injector.py  reporter.py
payloads/: payloads.txt  payloads_aggressive.txt  payloads_reflected.txt  payloads_waf_bypass.txt
xssense_engine/: Cargo.toml  README.md
xssense_engine/src/: lib.rs
