[package]
name = "xssense_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "xssense_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
tokio = { version = "1.0", features = ["full", "sync", "macros"] }
regex = "1.10"
url = "2.5"
